<resources>
    <string name="app_name">Annote</string>
    <string name="add_note">Add Note</string>
    <string name="note_title">Note Title</string>
    <string name="editing">Editing %s</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_note">Save Note</string>
    <string name="search">Search</string>
    <string name="editing_untitled">Editing Untitled Note</string>
    <string name="expand_attrs">Expand Attributes</string>
    <string name="add_attr">Add Attribute</string>
    <string name="content_hint">Tap here to start writing…</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="delete_attr">Delete Attribute</string>
</resources>