<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/key"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="TextContrastCheck"
        tools:layout_width="100dp" />

    <EditText
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/value"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="TextContrastCheck"
        tools:layout_width="100dp" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/delete_attr"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_baseline_clear_24"
        app:tint="#515151" />

</TableRow>