<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="263dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:context=".EditActivity">


        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/note_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/toggle_attrs"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Note Title" />

        <ImageButton
            android:id="@+id/toggle_attrs"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/expand_attrs"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_expand_more_24"
            app:tint="#000000" />

        <TableLayout
            android:id="@+id/attrs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <TableRow
                android:id="@+id/add_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/add_attr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/add_attr"
                    tools:ignore="TextContrastCheck" />
            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/content_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attrs"
            tools:text="This is my\nnote" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>